[package]
authors = ["nett_hier <lp@netthier.net>"]
edition = "2018"
readme = "README.md"
name = "stm32-gameboy"
version = "0.1.0"

[dependencies]
alloc-cortex-m = "^0.4"
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

st7735-lcd = "^0.8"
num-traits = { version = "^0.2", default-features = false }
num-derive = "^0.3"

[[bin]]
name = "stm32-gameboy"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations